--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           }
         });
         overlayLayers[label] = layer;
-        if (label === "Strathcona County AQHI") {
+        if (label === "Edmonton AQHI") {
           layer.addTo(map);  // Only Strathcona County shows initially
         }
       })
